--- a/marias/Proximity.HR.Web/Views/Home/Index.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/Index.cshtml
@@ -24,13 +24,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <img src="~/Images/Proximititranspa.png" width="150px" heigth="75px" />
-                <p>
-                    <img src="~/Images/slogan-transpa.png" width="150px" heigth="75px" />
-                </p>
-
+                <img src="~/Images/logo.svg" width="150px" heigth="75px" />
                 <p class="copyright">
-                    © 2016 Proximity de Costa Rica S.A. | <a href="http://www.proximitycr.com/">Join us</a>
+                    © 2016 Isthmus Costa Rica S.A. | <a href="http://www.isthmusit.com/" target="_blank">Join us</a>
                 </p>
             </div>
         </div>
