--- a/marias/Proximity.HR.Web/Views/Home/_profile.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_profile.cshtml
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="row">
-            <form novalidate name="f1" ng-submit="saveDetails()" accordeon-show >
+            <form novalidate name="f1" ng-submit="saveDetails()" accordeon-show>
                 <fieldset>
                     <div class="panel-group" id="accordion">
                         <div class="panel panel-default panel-transparent">
@@ -217,7 +217,7 @@
                                         </select>
                                     </div>
                                     <div class="col-sm-4">
-                                        <label for="hasLicense"><i class="fa fa-cc-license" aria-hidden="true"></i> License: </label>
+                                        <label for="hasLicense"><i class="fa fa-cc-license" aria-hidden="true"></i> B1 License: </label>
                                         <p class="form-control">
                                             <label for="licenseYes">Yes</label>
                                             <input id="licenseYes" type="radio" ng-model="employeeHasLicense" ng-value="true" ng-change="newPassportVisaSelected('employeeHasLicense')">
