--- a/marias/Proximity.HR.Web/Views/Shared/_Layout.cshtml
+++ b/marias/Proximity.HR.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="description" content="HR Dashboard">
     <meta name="author" content="Marias">
 
-    <title>Proximty HR</title>
+    <title>Isth-Me</title>
 
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
