--- a/marias/Proximity.HR.Web/Content/reports.css
+++ b/marias/Proximity.HR.Web/Content/reports.css
@@ -39,27 +39,28 @@
     width: 100%;
     height: 100%;
     min-width: 100vw;
-    min-height: 100vh;
+    max-height: 100vh;
     /*color: #F0EFF4;*/
     color: #333;
 }
 /*======================================================*/
-    .report-single-section {
-        height: 100%;
-        min-height: 100vh;
-        padding-top: 110px;
+.report-single-section {
+    height: 100%;
+    min-height: 100vh;
+    padding-top: 40px;
         
-        position: absolute;
-        top: 0;
-    }
+    position: absolute;
+    top: 0;
+}
 
-    .notShow { display: none;}
+.notShow { display: none;}
 /*======================================================*/
 .left-panel {
     position: fixed;
     top: 90px;
     padding: 20px 0;
-    background-color: #254441;
+    /*background-color: #254441;*/
+    background-color: #3E2D6C;
     color: #F0EFF4;
     width: 100%;
     max-width: 200px;
@@ -88,7 +89,7 @@
 
 .toggle-left-panel > i {
     font-size: 20px;
-    color: hotpink;
+    color: #7b63be;
 }
 
 .left-nav {
@@ -104,7 +105,8 @@
 
 .left-item:hover,
 .left-item--active {
-    background-color: rgba(0, 0, 0, .6);
+    /*background-color: rgba(0, 0, 0, .6);*/
+    background-color: #0e0a18;
     cursor: pointer;
 }
 
@@ -115,11 +117,11 @@
 
 .left-item:hover > a > i,
 .left-item--active > a > i{
-    color: hotpink;
+    color: #7b63be;
 }
 
 .left-link {
-    color: #838E83;
+    color: #eef;
     cursor: pointer;
     line-height: 50px;
     display: block;
@@ -146,7 +148,7 @@
     display: inline-block;
     padding: 30px 0 30px 30px;
     font-weight: 600;
-    color: hotpink;
+    color: #7b63be;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -236,4 +238,15 @@
 .navl .form-control:focus {
     border-color: #6CD4FF;
     border-width: 2px;
+}
+
+
+/*================overwrite from kendo filters========================*/
+#ageRangeDropDown, #montRangehDropDown {
+    position: relative;
+    top: 10px;
+}
+
+#ageRangeDropDown span, #montRangehDropDown span.k-input {
+    color: #a8a8a8!important;
 }
