--- a/marias/Proximity.HR.Web/Views/Reports/_FeatRep.cshtml
+++ b/marias/Proximity.HR.Web/Views/Reports/_FeatRep.cshtml
@@ -1,8 +1,13 @@
 ﻿<div id="features" class="notShow report-single-section">
     <div class="panel panel-primary" data-ng-controller="reportsCtrl">
         <div class="panel-heading">Features by Expertise Report</div>
-        <kendo-grid options="featGrid">
 
-        </kendo-grid>
+        <div id="featGrid"></div>
+
+        <script type="text/x-kendo-template" id="lvlFilterTemplate">
+            <div id="lvlDropDown">
+                <input type="search" id="lvlFilter" style="width: 120px" />
+            </div>
+        </script>
     </div>
 </div>
