--- a/marias/Proximity.HR.Web/Views/Reports/_EDRep.cshtml
+++ b/marias/Proximity.HR.Web/Views/Reports/_EDRep.cshtml
@@ -2,8 +2,36 @@
     <div class="panel panel-primary" data-ng-controller="reportsCtrl">
         <div class="panel-heading">Expiration Dates Report</div>
 
-        <kendo-grid options="edGrid">
+        <script type="text/x-kendo-template" id="ExpDatesFilterPassport">
+            <div id="ExpDates">
+                Passport <br />
+                <input id="from" style="max-width: 95px; font-size: 12px;" />
+                <input id="to" style="max-width: 95px; font-size: 12px;" />
+                <button id="filterPassport" class="k-button" style=" max-height 30px;"><i class="glyphicon glyphicon-filter"></i></button>
+            </div>
+        </script>
 
-        </kendo-grid>
+        <script type="text/x-kendo-template" id="ExpDatesFilterLicense">
+            <div id="ExpDates">
+                License <br />
+                <input id="from1" style="max-width: 95px; font-size: 12px;" />
+                <input id="to1" style="max-width: 95px;font-size: 12px;" />
+                <button id="filterLicense" class="k-button" style="max-height: 30px;"><i class="glyphicon glyphicon-filter"></i></button>
+            </div>
+        </script>
+
+        <script type="text/x-kendo-template" id="ExpDatesFilterVisa">
+            <div id="ExpDates">
+                Visa <br />
+                <input id="from2" style="max-width: 95px;font-size: 12px;" />
+                <input id="to2" style="max-width: 95px;font-size: 12px;" />
+                <button id="filterVisa" class="k-button" style=" max-height 30px;"><i class="glyphicon glyphicon-filter"></i></button>
+                @*<button id="clearFilterVisa" class="k-button" style=" max-height: 30px;font-size: 10px;"><i class="glyphicon glyphicon-close></i></button>*@
+            </div>
+        </script>
+
+
+
+        <div id="edGrid"></div>
     </div>
 </div>
