On Average Working Years allow Filter by Month in the field "Started On"

--- a/marias/Proximity.HR.Web/Views/Reports/_AverageReport.cshtml
+++ b/marias/Proximity.HR.Web/Views/Reports/_AverageReport.cshtml
@@ -2,12 +2,18 @@
 <div id="average" class="notShow report-single-section">
     <div class="panel panel-primary" data-ng-controller="reportsCtrl">
         <div class="panel-heading">Average Working years Report</div>
-        <kendo-grid options="avwyGrid">
+        <div id="avwyGrid">
             <div class="col-sm-2">
-                <p>Average:  {{avg0[0]}}</p>
+                <p>Average: {{avg0[0]}}</p>
             </div>
-           
-        </kendo-grid>
+
+        </div>
+
+        <script type="text/x-kendo-template" id="monthRangeFilter">
+            <div id="montRangehDropDown">
+                <input type="search" id="monthRange" style="width: 120px" />
+            </div>
+        </script>
     </div>
 </div>
 
