add placeholder to datepicker

--- a/marias/Proximity.HR.Web/Views/Reports/_EDRep.cshtml
+++ b/marias/Proximity.HR.Web/Views/Reports/_EDRep.cshtml
@@ -5,8 +5,8 @@
         <script type="text/x-kendo-template" id="ExpDatesFilterPassport">
             <div id="ExpDates">
                 Passport <br />
-                <input id="passportFrom" style="max-width: 95px; font-size: 12px;" />
-                <input id="passportTo" style="max-width: 95px; font-size: 12px;" />
+                <input placeholder="FROM" id="passportFrom" style="max-width: 95px; font-size: 12px;" />
+                <input placeholder="TO" id="passportTo" style="max-width: 95px; font-size: 12px;" />
                 <button id="filterPassport" class="k-button" style=" max-height: 30px;"><i class="glyphicon glyphicon-filter"></i></button>
                 <br /> @*<button id="clearFilterPassport" class="k-button" style="position: relative; max-height: 30px;font-size: 10px;"><i class="glyphicon glyphicon-refresh></i></button>*@
             </div>
@@ -15,8 +15,8 @@
         <script type="text/x-kendo-template" id="ExpDatesFilterLicense">
             <div id="ExpDates">
                 License <br />
-                <input id="licenseFrom" style="max-width: 95px; font-size: 12px;" />
-                <input id="licenseTo" style="max-width: 95px;font-size: 12px;" />
+                <input placeholder="FROM" id="licenseFrom" style="max-width: 95px; font-size: 12px;" />
+                <input placeholder="TO" id="licenseTo" style="max-width: 95px;font-size: 12px;" />
                 <button id="filterLicense" class="k-button" style="max-height: 30px;"><i class="glyphicon glyphicon-filter"></i></button>
                 <br /> @*<button id="clearFilterLicense" class="k-button" style="position: relative; max-height: 30px;font-size: 10px;"><i class="glyphicon glyphicon-refresh></i></button>*@
             </div>
@@ -26,8 +26,8 @@
             <div id="ExpDates">
                 Visa 
                 <br />
-                <input id="visaFrom" style="max-width: 95px;font-size: 12px;" />
-                <input id="visaTo" style="max-width: 95px;font-size: 12px;" />
+                <input placeholder="FROM" id="visaFrom" style="max-width: 95px;font-size: 12px;" />
+                <input placeholder="TO" id="visaTo" style="max-width: 95px;font-size: 12px;" />
                 <button id="filterVisa" class="k-button" style=" max-height: 30px;"><i class="glyphicon glyphicon-filter"></i></button>
                 <br /> 
             </div>
