--- a/marias/Proximity.HR.Web/Views/Reports/_DemoRep.cshtml
+++ b/marias/Proximity.HR.Web/Views/Reports/_DemoRep.cshtml
@@ -1,8 +1,13 @@
 ﻿<div id="demo" class="notShow report-single-section">
     <div  class="panel panel-primary" data-ng-controller="reportsCtrl">
         <div class="panel-heading">Demographic Report</div>
-        <kendo-grid options="mainGridOptions">
+        @*<kendo-grid options="mainGridOptions"></kendo-grid>*@
+        <div id="DemographicsGrid"></div>
 
-        </kendo-grid>
+        <script type="text/x-kendo-template" id="demographicFilter">
+            <div id="demographicDropDown">
+                <input type="search" id="demographic" style="width: 120px" />
+            </div>
+        </script>
     </div>
 </div>
