--- a/marias/Proximity.HR.Web/Views/Home/_modal.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_modal.cshtml
@@ -30,7 +30,7 @@
     </div>
     <div class="modal-footer">
         @*<button class="btn btn-primary btn-sm" type="button" ng-click="SaveFeature()" ng-hide=""><i class="glyphicon glyphicon-save-file"></i> Save</button>*@
-        <button class="btn btn-primary btn-sm" type="button" ng-click="ok()">Apply</button>
+        <button class="btn btn-primary btn-sm" type="button" ng-click="ok(Features)">Apply</button>
         <button class="btn btn-warning btn-sm" type="button" ng-click="cancel()">Cancel</button>
     </div>
 </script>
