added class anchor-pointer to edit feature btn

--- a/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
@@ -62,7 +62,7 @@
                                                                     </label>
                                                                 </div>
                                                                 <div class="col-sm-2">
-                                                                    <a  ng-click="open('lg',true, item)">
+                                                                    <a class="anchor-pointer"  ng-click="open('lg',true, item)">
                                                                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                                                     </a>
                                                                 </div>
