--- a/marias/Proximity.HR.Web/Views/Home/_profile.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_profile.cshtml
@@ -10,7 +10,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" ng-hide="showHideAdminContent">
             <div class="col-sm-2">
                 <b><i class="fa fa-search" aria-hidden="true"></i> Select employee:  </b>
             </div>
