validation for features and technologies. do not allow repeated items

--- a/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
@@ -37,7 +37,7 @@
                                                             <div class="row" style="padding: 5px;">
                                                                 <div class="col-sm-2">
                                                                     <h3><span>{{item.Name}}</span></h3>
-                                                                    <input type="hidden" class="form-control" name="TechnologyFeature" ng-model="TechnologyFeature[$index]" value="{{item.Id}}"/>
+                                                                    <input type="hidden" class="form-control" name="TechnologyFeature" ng-model="TechnologyFeature[$index]" value="{{item.Id}}" />
                                                                 </div>
                                                                 <div class="row col-sm-3 feedback-rating-row" ng-init="rate=item.Level">
 
@@ -46,23 +46,23 @@
                                                                             on-hover="hovering_over(value)"
                                                                             on-leave="overStar = null"
                                                                             titles="['poor','basic','good','excellent','expert']"
-                                                                            style="cursor: pointer;" ng-click="addTechFeat(item.Id,rate,isDesirable,isTeachable)"/>
+                                                                            style="cursor: pointer;" ng-click="addTechFeat(item.Id,rate,isDesirable,isTeachable)" />
 
                                                                 </div>
                                                                 <div class="col-sm-3" ng-init="isDesirable=item.Desirable">
                                                                     <label>
                                                                         I want training!
-                                                                        <switch name="Desirable" on="Yes" off="No" ng-model="isDesirable" ng-change="addTechFeat(item.Id,rate,isDesirable,isTeachable)" ng-disabled="isTeachable"/>
+                                                                        <switch name="Desirable" on="Yes" off="No" ng-model="isDesirable" ng-change="addTechFeat(item.Id,rate,isDesirable,isTeachable)" ng-disabled="isTeachable" />
                                                                     </label>
                                                                 </div>
                                                                 <div class="col-sm-2" ng-init="isTeachable=item.Teachable">
                                                                     <label>
                                                                         I can teach!
-                                                                        <switch class="green" name="Teachable" on="Yes" off="No" ng-model="isTeachable" ng-change="addTechFeat(item.Id,rate,isDesirable,isTeachable)" ng-disabled="isDesirable"/>
+                                                                        <switch class="green" name="Teachable" on="Yes" off="No" ng-model="isTeachable" ng-change="addTechFeat(item.Id,rate,isDesirable,isTeachable)" ng-disabled="isDesirable" />
                                                                     </label>
                                                                 </div>
                                                                 <div class="col-sm-2">
-                                                                    <a class="anchor-pointer"  ng-click="open('lg',true, item)">
+                                                                    <a class="anchor-pointer" ng-click="open('lg',true, item)">
                                                                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                                                     </a>
                                                                 </div>
@@ -82,8 +82,10 @@
                                                                                                id="featureName"
                                                                                                name="featureName"
                                                                                                placeholder="Feature Name..."
-
-                                                                                               ng-model="Featuress.Name">
+                                                                                               ng-model="Featuress.Name"
+                                                                                               ng-blur="loadFeatures()">
+                                                                                        @*<div ng-if="msg" class="alert alert-danger" role="alert"><strong>Error!</strong> {{msg}}</div>*@
+                                                                                        @*<div ng-if="warning" class="alert alert-warning" role="alert"><strong>Suggestion!</strong> {{warning}}</div>*@
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="col-sm-7">
@@ -98,7 +100,7 @@
                                                                                 </div>
                                                                                 <div class="col-sm-2">
                                                                                     <div class="form-group">
-                                                                                        <button type="button" class="btn btn-sm btn-primary" ng-click="saveFeature(tecn.Id)">
+                                                                                        <button type="button" class="btn btn-sm btn-primary" ng-disabled="btnDis" ng-click="saveFeature(tecn.Id)">
                                                                                             <i class="fa fa-plus" aria-hidden="true"></i> Save
                                                                                         </button>
                                                                                     </div>
@@ -107,6 +109,15 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
+                                                            </div>
+                                                            @*alert here*@
+                                                            <div class="row" style="padding: 5px;">
+                                                                <div class="col-sm-4">
+                                                                    <div ng-if="msg" class="alert alert-danger" role="alert">
+                                                                        <strong><i class="fa fa-warning" aria-hidden="true"></i> Error!</strong> {{msg}}
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-xs-3"></div>
                                                             </div>
                                                         </li>
                                                     </ul>
