refactored code, validation

--- a/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_skills.cshtml
@@ -83,7 +83,7 @@
                                                                                                name="featureName-{{$index}}"
                                                                                                placeholder="Feature Name..."
                                                                                                ng-model="FeaturessName"
-                                                                                               ng-blur="loadFeatures(FeaturessName, tecn.Id)">
+                                                                                               ng-change="loadFeatures(FeaturessName, tecn.Id)">
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="col-sm-7">
