--- a/marias/Proximity.HR.Web/Views/Home/_login.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_login.cshtml
@@ -1,5 +1,5 @@
 ﻿<!--Login form-->
-<section id="home" class="pfblock-image screen-height">
+<section id="home" class="">
     <div class="intro">
         <div class="start"></div>
         <div class="logo">
