--- a/marias/Proximity.HR.Web/Views/Home/_menu.cshtml
+++ b/marias/Proximity.HR.Web/Views/Home/_menu.cshtml
@@ -9,10 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
-                    <p>Proximity HR</p>
-                    @*<img class="navbar-brand--logo" src="../../images/Proximititranspa.png" alt="" />*@
-                </a>
+                <a style="color: white;" class="navbar-brand" href="index.html">Isth-Me</a>
             </div>
             <div class="collapse navbar-collapse" id="custom-collapse">
                 <ul class="nav navbar-nav navbar-right">
